--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# Environments and secrets
 .env
 .envrc
 .venv
@@ -143,6 +143,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.dlt/secrets.toml
 
 # Spyder project settings
 .spyderproject
