--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,8 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
+.env*.local
 .envrc
 .venv
 env/
@@ -143,6 +145,14 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# DLT (data load tool) secrets and state
+.dlt/
+
+# DuckDB database files
+*.db
+*.duckdb
+data_warehouse/
 
 # Spyder project settings
 .spyderproject
