add: Jupyter and SQL magic dependencies for EDA notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,11 @@ dependencies = [
     "dagster-dlt>=0.28.11",
     "dagster-duckdb>=0.28.11",
     "dlt>=1.20.0",
+    "duckdb-engine>=0.17.0",
     "duckdb>=1.4.3",
     "httpx>=0.28.1",
+    "ipykernel>=7.1.0",
+    "jupysql>=0.11.1",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "streamlit>=1.53.0",
