--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
     "streamlit>=1.53.0",
+    "dbt-core>=1.11.2",
+    "dbt-duckdb>=1.10.0",
 ]
 
 [build-system]
