--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,10 @@ venv.bak/
 # DLT (data load tool) secrets and state
 .dlt/
 
+# dbt packages and dependencies
+dbt/dbt_packages/
+
+
 # DuckDB database files
 *.db
 *.duckdb
