add: settings.json

--- a/.gitignore
+++ b/.gitignore
@@ -211,11 +211,11 @@ cython_debug/
 .abstra/
 
 # Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+#  Ignore personal preferences (themes, UI settings) but commit workspace functionality settings
+.vscode/settings.json
+.vscode/*.code-snippets
+.vscode/launch.json
+.vscode/.react/
 
 # Ruff stuff:
 .ruff_cache/
