--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "dagster>=1.12.11",
+    "dagster-webserver>=1.12.11",
     "dagster-dbt>=0.28.11",
     "dagster-dlt>=0.28.11",
     "dagster-duckdb>=0.28.11",
@@ -28,3 +29,7 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.dagster]
+module_name = "svensk_flyt.definitions"
+code_location_name = "svensk_flyt"
