update: .env.example with DBT_PROFILES_DIR

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Swedavia API Configuration
 SWEDAVIA_API_KEY=your-api-key-here
+SWEDAVIA_BASE_URL=https://api.swedavia.se/flightinfo/v2
 
-# DuckDB Configuration (optional, defaults to svenska-flyt.duckdb)
-# DUCKDB_FILE_PATH=svenska-flyt.duckdb
+# DuckDB Configuration
+DUCKDB_PATH=data_warehouse/svenska-flyt.duckdb
+
+# DBT Configuration
+DBT_PROFILES_DIR=%USERPROFILE%\.dbt
