add: schema configuration for dimensions and facts layers

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -24,5 +24,11 @@ models:
     intermediate:
       +schema: intermediate
 
-    marts:
+    dim:
+      +schema: dimensions
+
+    fct:
+      +schema: facts
+
+    mart:
       +schema: marts
